--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Welcome</head>
+<title>Welcome</title>
 </head>
 <body>
  <img src="ft4.png" alt="Fat Tree 4"> 
