--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <title>A S M Asadujjaman&#39;s Home Page</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body {
-  font-family: "Lato", sans-serif;
-}
+
+
+
+*{font-family:"Roboto Slab", serif;}
 
 hr.headerline {
   border: 1px solid blue;
