--- a/index.html
+++ b/index.html
@@ -113,13 +113,14 @@ hr.headerline {
       <h1>About</h1>
       
       <p style="width: 50%;">
-        A S M Asadujjaman is pursuing his PhD with the Audit Ready Cloud (ARC) group at Concordia Institute for Information Systems Engineering (CIISE). 
+        A S M Asadujjaman is pursuing his PhD with the <a href="http://arc.encs.concordia.ca/">Audit Ready Cloud (ARC)</a> group at Concordia Institute for Information Systems Engineering (CIISE). 
         Previously, he completed MSc in Information and Communication Technology from Bangladesh University of Engineering and Technology (BUET), Dhaka. 
-        Before joining Concordia University as a PhD Student, he worked as a Lead Engineer  
+        Before joining Concordia University as a PhD student, he worked as a Lead Engineer  
         in Banglalink Digital Communications Limited, Dhaka, Bangladesh where he led IP Network Planning during transformation into 4G in 2018. 
         His research is in the area of Cloud Computing and Network Function Virtualization (NFV) security.
       </p>
-      <a href="javascript:showContent('publications')">Publications</a>
+      <a href="javascript:showContent('publications')">Publications</a><br />
+      <a href="https://github.com/a-s-m-asadujjaman">Browse projects on GitHub</a>
   </center>
   </div>
   <div id="publications">
@@ -233,7 +234,7 @@ hr.headerline {
       </tr>
       </table>
       <p>
-        <a href="https://scholar.google.com/citations?user=hR3oekIAAAAJ&hl=en">See more details on Google Scholar</a>
+        <a href="https://scholar.google.com/citations?user=hR3oekIAAAAJ&hl=en">See more details on Google Scholar</a><br />
         <a href="javascript:showContent('experience')">Experience</a>
       </p>
 
@@ -255,7 +256,8 @@ hr.headerline {
       <b>e-mail</b><br />
       <img style="background-color:blue;" width="300px" src="contact.png" />
     </p>
-    <a href="javascript:showContent('home')">Home</a>
+    <a href="javascript:showContent('home')">Home</a> <br />
+    <a href="https://a-s-m-asadujjaman.github.io/a-s-m-asadujjaman">View on github.io</a>
     </center>
   </div>
 </div>
