--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ hr.headerline {
       <img style="background-color:blue;" width="300px" src="contact.png" />
     </p>
     <a href="javascript:showContent('home')">Home</a> <br />
-    <a href="https://a-s-m-asadujjaman.github.io/a-s-m-asadujjaman">View on github.io</a>
+    <a href="https://users.encs.concordia.ca/~a_asaduj/">View on concordia.ca</a>
     </center>
   </div>
 </div>
