--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ hr.headerline {
       <img style="background-color:blue;" width="300px" src="contact.png" />
     </p>
     <a href="javascript:showContent('home')">Home</a> <br />
-    <a href="https://users.encs.concordia.ca/~a_asaduj/">View on Concordia University</a>
+    <a href="https://users.encs.concordia.ca/~a_asaduj/">View on concordia.ca</a>
     </center>
   </div>
 </div>
