--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ hr.headerline {
        Fast control channel recovery for resilient in-band openflow
         networks.
        In <em>2018 4th IEEE Conference on Network Softwarization and
-        Workshops (NetSoft)</em>, pages 19--27. IEEE, 2018.
+        Workshops (NetSoft)</em>, pages 19--27. IEEE, 2018 (Acceptance ratio 20/103&#8776;19%).
       [&nbsp;<a href="bibtex_bib.html#asadujjaman2018fast">bib</a>&nbsp;]
       
       </td>
