--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ hr.headerline {
       <td class="bibtexitem">
       <b>A S M Asadujjaman</b>, Momen Oqaily, Yosr Jarraya, Suryadipta Majumdar, Makan Pourzandi, Lingyu Wang and Mourad Debbabi.
        Artificial Packet-Pair Dispersion (APPD): A Blackbox Approach to Verifying the Integrity of NFV Service Chains.
-       In <em>9th IEEE Conference on Communications and Network Security (CNS 2021)</em>, IEEE, 2021, Accepted.
+       In <em>9th IEEE Conference on Communications and Network Security (CNS 2021)</em>, IEEE, 2021, Accepted (Acceptance ratio 32/113&#8776;28%).
       [&nbsp;<a href="bibtex_bib.html#asadujjaman2021appd">bib</a>&nbsp;]
 
       </td>
