--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ hr.headerline {
     <h1>Professional Activities</h1>
     <hr class="headerline">
     <ul>
-      <li>Journal Paper Reviewer: Annals of Telecommunications, Elsevier Computer Networks</li>
+      <li>Journal Paper Reviewer: Springer Annals of Telecommunications, Elsevier Computer Networks, IEEE Transactions on Dependable and Secure Computing (TDSC)</li>
       <li>Conference Paper Reviewer: ESORICS'21</li>
     </ul>
     <a href="javascript:showContent('contact')">Contact Information</a>
