--- a/index.html
+++ b/index.html
@@ -131,6 +131,58 @@ hr.headerline {
 
       <tr valign="top">
       <td align="right" class="bibtexnumber">
+      [<a name="asadujjaman2024securing">1</a>]
+      </td>
+      <td class="bibtexitem">
+      <b>A S M Asadujjaman</b>, Davi Pontes, Eduardo Falcão, Andrey Brito.
+       Securing Confidential VMs in Public Clouds.
+       In <em>15th IEEE International Conference on Cloud Computing Technology and Science (CloudCom)</em>, IEEE, 2024.
+      [&nbsp;<a href="bibtex_bib.html#asadujjaman2024securing">bib</a>&nbsp;]
+
+      </td>
+      </tr>
+
+      <tr valign="top">
+      <td align="right" class="bibtexnumber">
+      [<a name="asadujjaman2024securing">1</a>]
+      </td>
+      <td class="bibtexitem">
+      Davi Pontes, Fernando Silva, Anderson Melo, Carlos Pamplona Filho, A S M Asadujjaman, Eduardo Falcão, Andrey Brito.
+       Multi-Platform and Vault-Free Attestation of Confidential VMs.
+       In <em>13th Latin-American Symposium on Dependable and Secure Computing</em>, ACM, 2024.
+      [&nbsp;<a href="bibtex_bib.html#asadujjaman2024securing">bib</a>&nbsp;]
+
+      </td>
+      </tr>
+
+      <tr valign="top">
+      <td align="right" class="bibtexnumber">
+      [<a name="oqaily2023tenant">1</a>]
+      </td>
+      <td class="bibtexitem">
+      Momen Oqaily, Suryadipta Majumdar, Lingyu Wang, Mohammad Ekramul Kabir, Yosr Jarraya, <b>ASM Asadujjaman</b>, Makan Pourzandi, Mourad Debbabi.
+       A Tenant-based Two-stage Approach to Auditing the Integrity of Virtual Network Function Chains Hosted on Third-Party Clouds.
+       In <em>13th ACM Conference on Data and Application Security and Privacy</em>, IEEE, 2023.
+      [&nbsp;<a href="bibtex_bib.html#oqaily2023tenant">bib</a>&nbsp;]
+
+      </td>
+      </tr>
+
+      <tr valign="top">
+      <td align="right" class="bibtexnumber">
+      [<a name="asadujjaman20225gfiver">1</a>]
+      </td>
+      <td class="bibtexitem">
+      <b>A S M Asadujjaman</b>, Mohammad Ekramul Kabir, Hinddeep Purohit, Suryadipta Majumdar, Lingyu Wang, Yosr Jarraya, Makan Pourzandi.
+       5GFIVer: Functional Integrity Verification for 5G Cloud-native Network Functions.
+       In <em>13th IEEE International Conference on Cloud Computing Technology and Science (CloudCom)</em>, IEEE, 2022.
+      [&nbsp;<a href="bibtex_bib.html#asadujjaman20225gfiver">bib</a>&nbsp;]
+
+      </td>
+      </tr>
+
+      <tr valign="top">
+      <td align="right" class="bibtexnumber">
       [<a name="asadujjaman2021appd">1</a>]
       </td>
       <td class="bibtexitem">
