--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ hr.headerline {
       [<a name="asadujjaman2024securing">2</a>]
       </td>
       <td class="bibtexitem">
-      Davi Pontes, Fernando Silva, Anderson Melo, Carlos Pamplona Filho, A S M Asadujjaman, Eduardo Falcão, Andrey Brito.
+      Davi Pontes, Fernando Silva, Anderson Melo, Carlos Pamplona Filho, <b>A S M Asadujjaman</b>, Eduardo Falcão, Andrey Brito.
        Multi-Platform and Vault-Free Attestation of Confidential VMs.
        In <em>13th Latin-American Symposium on Dependable and Secure Computing</em>, ACM, 2024.
       [&nbsp;<a href="bibtex_bib.html#asadujjaman2024securing">bib</a>&nbsp;]
