--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@ hr.headerline {
        Multi-Platform and Vault-Free Attestation of Confidential VMs.
        In <em>13th Latin-American Symposium on Dependable and Secure Computing</em>, ACM, 2024.
       [&nbsp;<a href="bibtex_bib.html#asadujjaman2024securing">bib</a>&nbsp;]
+      [&nbsp;<a href="papers/asadujjaman2024securing">PDF</a>&nbsp;]
 
       </td>
       </tr>
