--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@ hr.headerline {
        A Tenant-based Two-stage Approach to Auditing the Integrity of Virtual Network Function Chains Hosted on Third-Party Clouds.
        In <em>13th ACM Conference on Data and Application Security and Privacy</em>, IEEE, 2023.
       [&nbsp;<a href="bibtex_bib.html#oqaily2023tenant">bib</a>&nbsp;]
+      [&nbsp;<a href="https://arc.encs.concordia.ca/papers/oqaily2023nfvsense.pdf">PDF</a>&nbsp;]
 
       </td>
       </tr>
@@ -178,7 +179,7 @@ hr.headerline {
        5GFIVer: Functional Integrity Verification for 5G Cloud-native Network Functions.
        In <em>13th IEEE International Conference on Cloud Computing Technology and Science (CloudCom)</em>, IEEE, 2022.
       [&nbsp;<a href="bibtex_bib.html#asadujjaman20225gfiver">bib</a>&nbsp;]
-
+      [&nbsp;<a href="https://arc.encs.concordia.ca/papers/5GFIVer.pdf">PDF</a>&nbsp;]
       </td>
       </tr>
 
@@ -191,6 +192,7 @@ hr.headerline {
        Artificial Packet-Pair Dispersion (APPD): A Blackbox Approach to Verifying the Integrity of NFV Service Chains.
        In <em>9th IEEE Conference on Communications and Network Security (CNS 2021)</em>, IEEE, 2021 (Acceptance ratio 32/113&#8776;28%).
       [&nbsp;<a href="bibtex_bib.html#asadujjaman2021appd">bib</a>&nbsp;]
+      [&nbsp;<a href="https://arc.encs.concordia.ca/papers/APPD_CNS2021.pdf">PDF</a>&nbsp;]
 
       </td>
       </tr>
