--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ hr.headerline {
       <td class="bibtexitem">
       Diego Lopez-Pajares, Joaquin Alvarez-Horcajo, Elisa Rojas, <b>ASM Asadujjaman</b>, and
         Isaias Martinez-Yelmo.
-       Amaru: Plug&amp;play resilient in-band control for sdn.
+       Amaru: Plug&amp;play resilient in-band control for SDN.
        <em>IEEE Access</em>, 7:123202--123218, 2019.
       [&nbsp;<a href="bibtex_bib.html#lopez2019amaru">bib</a>&nbsp;]
       
@@ -234,7 +234,7 @@ hr.headerline {
       </td>
       <td class="bibtexitem">
       <b>ASM Asadujjaman</b>, Elisa Rojas, Mohammad&nbsp;Shah Alam, and Suryadipta Majumdar.
-       Fast control channel recovery for resilient in-band openflow
+       Fast control channel recovery for resilient in-band OpenFlow
         networks.
        In <em>2018 4th IEEE Conference on Network Softwarization and
         Workshops (NetSoft)</em>, pages 19--27. IEEE, 2018 (Acceptance ratio 20/103&#8776;19%).
