--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@ hr.headerline {
       <h1>About</h1>
       
       <p style="width: 50%;">
-        A S M Asadujjaman is currently a research at Federal University of Campina Grande (UFCG), Brazil. Previously he obtained his PhD with the <a href="http://arc.encs.concordia.ca/">Audit Ready Cloud (ARC)</a> group at Concordia Institute for Information Systems Engineering (CIISE) 
-        and completed MSc in Information and Communication Technology from Bangladesh University of Engineering and Technology (BUET), Dhaka. 
+        A S M Asadujjaman is currently a researcher at the Federal University of Campina Grande (UFCG), Brazil. Previously he obtained his PhD with the <a href="http://arc.encs.concordia.ca/">Audit Ready Cloud (ARC)</a> group at Concordia Institute for Information Systems Engineering (CIISE) 
+        and completed an MSc in Information and Communication Technology from Bangladesh University of Engineering and Technology (BUET), Dhaka. 
         Before joining Concordia University as a PhD student, he worked as a Lead Engineer  
-        in Banglalink Digital Communications Limited, Dhaka, Bangladesh where he led IP Network Planning during transformation into 4G in 2018. 
-        His research is in the area of Cloud Computing and Network Function Virtualization (NFV) security.
+        in Banglalink Digital Communications Limited, Dhaka, Bangladesh, he led IP Network Planning during the transformation into 4G in 2018. 
+        His research is in Cloud Computing and Network Function Virtualization (NFV) security.
       </p>
       <a href="javascript:showContent('publications')">Publications</a><br />
       <a href="https://github.com/a-s-m-asadujjaman">Browse projects on GitHub</a>
