--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@ hr.headerline {
       </table>
       <p>
         <a href="https://scholar.google.com/citations?user=hR3oekIAAAAJ&hl=en">See more details on Google Scholar</a><br />
+        <a href="https://orcid.org/0000-0001-6180-3227">See more details on ORCiD</a><br />
         <a href="javascript:showContent('experience')">Experience</a>
       </p>
 
