--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@ hr.headerline {
        <em>IEEE Access</em>, 7:123202--123218, 2019.
       [&nbsp;<a href="bibtex_bib.html#lopez2019amaru">bib</a>&nbsp;]
       [&nbsp;<a href="https://www.researchgate.net/publication/335416253_Amaru_Plugplay_resilient_in-band_control_for_SDN/fulltext/5d6481a7458515d610265ffa/Amaru-Plug-play-resilient-in-band-control-for-SDN.pdf">PDF</a>&nbsp;]
+      [&nbsp;<a href="https://github.com/NETSERV-UAH/Amaru">Source Code</a>&nbsp;]
       </td>
       </tr>
       
