--- a/index.html
+++ b/index.html
@@ -324,7 +324,9 @@ hr.headerline {
     <h1>Professional Activities</h1>
     <hr class="headerline">
     <ul>
+      <li>OC Co-Chair: <a href="https://issre.github.io/2025/">ISSRE'25</a>></li>
       <li>Journal Paper Reviewer: Springer Annals of Telecommunications, Elsevier Computer Networks, IEEE Transactions on Dependable and Secure Computing (TDSC)</li>
+      
       <li>Conference Paper Reviewer: ESORICS'21</li>
     </ul>
     <a href="javascript:showContent('contact')">Contact Information</a>
@@ -388,3 +390,4 @@ function toggleNav() {
    
 </body>
 </html> 
+
