--- a/index.html
+++ b/index.html
@@ -238,8 +238,7 @@ hr.headerline {
       <b>A S M Asadujjaman</b>, Elisa Rojas, Mohammad&nbsp;Shah Alam, and Suryadipta Majumdar.
        Fast control channel recovery for resilient in-band OpenFlow
         networks.
-       In <em>2018 4th IEEE Conference on Network Softwarization and
-        Workshops (NetSoft)</em>, pages 19--27. IEEE, 2018 (Acceptance ratio 20/103&#8776;19%).
+       In <em>2018 4th IEEE Conference on Network Softwarization (NetSoft)</em>, pages 19--27. IEEE, 2018 (Acceptance ratio 20/103&#8776;19%).
       [&nbsp;<a href="bibtex_bib.html#asadujjaman2018fast">bib</a>&nbsp;]
       [&nbsp;<a href="https://users.encs.concordia.ca/~majumdar/papers/netsoft18-author.pdf">PDF</a>&nbsp;]
       </td>
@@ -389,6 +388,7 @@ function toggleNav() {
    
 </body>
 </html> 
+
 
 
 
