--- a/index.html
+++ b/index.html
@@ -114,9 +114,11 @@ hr.headerline {
       <h1>About</h1>
       
       <p style="width: 50%;">
-        A S M Asadujjaman is currently a researcher at the Federal University of Campina Grande (UFCG), Brazil. Previously he obtained his PhD with the <a href="http://arc.encs.concordia.ca/">Audit Ready Cloud (ARC)</a> group at Concordia University, Canada <img src="canada.png" alt="Maple Leaf" 
+        A S M Asadujjaman is currently a researcher at the Federal University of Campina Grande (UFCG) <img src="brazil.png" alt="Brazil Flag" 
+     style="height:1em; width:auto; vertical-align:-0.15em;">. Previously he obtained his PhD with the <a href="http://arc.encs.concordia.ca/">Audit Ready Cloud (ARC)</a> group at Concordia University <img src="canada.png" alt="Maple Leaf" 
      style="height:1em; width:auto; vertical-align:-0.15em;">
-        and completed an MSc in Information and Communication Technology from Bangladesh University of Engineering and Technology (BUET), Dhaka. 
+        and completed an MSc in Information and Communication Technology from Bangladesh University of Engineering and Technology (BUET) <img src="bangladesh.png" alt="Bangladesh Flag" 
+     style="height:1em; width:auto; vertical-align:-0.15em;">. 
         Before joining Concordia University as a PhD student, he worked as a Lead Engineer  
         in Banglalink Digital Communications Limited, Dhaka, Bangladesh, he led IP Network Planning during the transformation into 4G in 2018. 
         His research is in Cloud Computing and Network Function Virtualization (NFV) security.
@@ -389,6 +391,7 @@ function toggleNav() {
    
 </body>
 </html> 
+
 
 
 
