--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ hr.headerline {
      style="height:1em; width:auto; vertical-align:-0.15em;">. 
         Before joining Concordia University as a PhD student, he worked as a Lead Engineer  
         in Banglalink Digital Communications Limited, Dhaka, Bangladesh, he led IP Network Planning during the transformation into 4G in 2018. 
-        His research is in Cloud Computing and Network Function Virtualization (NFV) security.
+        His current research is in IT security.
       </p>
       <a href="javascript:showContent('publications')">Publications</a><br />
       <a href="https://github.com/a-s-m-asadujjaman">Browse projects on GitHub</a>
@@ -391,6 +391,7 @@ function toggleNav() {
    
 </body>
 </html> 
+
 
 
 
