--- a/index.html
+++ b/index.html
@@ -118,10 +118,7 @@ hr.headerline {
      style="height:1em; width:auto; vertical-align:-0.15em;">. Previously he obtained his PhD with the <a href="http://arc.encs.concordia.ca/">Audit Ready Cloud (ARC)</a> group at Concordia University <img src="canada.png" alt="Maple Leaf" 
      style="height:1em; width:auto; vertical-align:-0.15em;">
         and completed an MSc in Information and Communication Technology from Bangladesh University of Engineering and Technology (BUET) <img src="bangladesh.png" alt="Bangladesh Flag" 
-     style="height:1em; width:auto; vertical-align:-0.15em;">. 
-        Before joining Concordia University as a PhD student, he worked as a Lead Engineer  
-        in Banglalink Digital Communications Limited, Dhaka, Bangladesh, he led IP Network Planning during the transformation into 4G in 2018. 
-        His current research is in IT security.
+     style="height:1em; width:auto; vertical-align:-0.15em;">. His current research is in IT security.
       </p>
       <a href="javascript:showContent('publications')">Publications</a><br />
       <a href="https://github.com/a-s-m-asadujjaman">Browse projects on GitHub</a>
@@ -391,6 +388,7 @@ function toggleNav() {
    
 </body>
 </html> 
+
 
 
 
