--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@ hr.headerline {
       
       <p style="width: 50%;">
         A S M Asadujjaman is currently a researcher at the Federal University of Campina Grande (UFCG) <img src="brazil.png" alt="Brazil Flag" 
-     style="height:1em; width:auto; vertical-align:-0.15em;">. Previously he obtained his PhD with the <a href="http://arc.encs.concordia.ca/">Audit Ready Cloud (ARC)</a> group at Concordia University <img src="canada.png" alt="Maple Leaf" 
+     style="height:1em; width:auto; vertical-align:-0.15em;">. Previously he obtained his PhD in Information Systems Engineering with the <a href="http://arc.encs.concordia.ca/">Audit Ready Cloud (ARC)</a> group from Concordia University <img src="canada.png" alt="Maple Leaf" 
      style="height:1em; width:auto; vertical-align:-0.15em;">
-        and completed an MSc in Information and Communication Technology from Bangladesh University of Engineering and Technology (BUET) <img src="bangladesh.png" alt="Bangladesh Flag" 
+        and MSc in Information and Communication Technology from Bangladesh University of Engineering and Technology (BUET) <img src="bangladesh.png" alt="Bangladesh Flag" 
      style="height:1em; width:auto; vertical-align:-0.15em;">. His current research is in IT security.
       </p>
       <a href="javascript:showContent('publications')">Publications</a><br />
@@ -388,6 +388,7 @@ function toggleNav() {
    
 </body>
 </html> 
+
 
 
 
