--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ hr.headerline {
       <b>Address</b><br />
       10.401-1515 Saint-Catherine St W, Montreal, QC H3G 2W1<br />
       <b>e-mail</b><br />
-      <img style="background-color:blue;" width="300px" src="contact.png" />
+      <img style="background-color:blue;" width="300px" src="lsd.jpeg" />
     </p>
     <a href="javascript:showContent('home')">Home</a> <br />
     <a href="https://users.encs.concordia.ca/~a_asaduj/">View on concordia.ca</a>
@@ -388,6 +388,7 @@ function toggleNav() {
    
 </body>
 </html> 
+
 
 
 
