--- a/index.html
+++ b/index.html
@@ -334,7 +334,8 @@ hr.headerline {
     <h1>Contact</h1>   
     <p>
       <b>Address</b><br />
-      10.401-1515 Saint-Catherine St W, Montreal, QC H3G 2W1<br />
+      Laboratório de Sistemas Distribuidos, Universidade Federal de Campina Grande<br />
+      Campina Grande - PB, 58429-900, Brazil<br />
       <b>e-mail</b><br />
       <img style="background-color:blue;" width="300px" src="lsd.jpeg" />
     </p>
@@ -388,6 +389,7 @@ function toggleNav() {
    
 </body>
 </html> 
+
 
 
 
