--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ hr.headerline {
       [&nbsp;<a href="bibtex_bib.html#asadujjaman2024securing">bib</a>&nbsp;]
       [&nbsp;<a href="papers/asadujjaman2024securing.pdf">PDF</a>&nbsp;]
       [&nbsp;<a href="https://youtu.be/knuQP6M2Mis?si=UNB-5GuwS2JS5dV4">Presentation</a>&nbsp;]
-        
+      <meta name="Abstract of the paper titled Securing Confidential VMs in Public Clouds" content="Cloud providers and CPU vendors are working together to deliver the promise of Confidential Computing through the Confidential Virtual Machine (CVM) offerings. However, the steps required to verify the authenticity of CVMs are still unclear. Technical specifications are difficult to follow, and the implementations by the cloud providers are incomplete. Currently, there is no serviceable procedure to ensure desired security properties for CVM users. In this work, our goal is to secure confidential VMs by facilitating their authenticity verification and addressing security issues arising from their incomplete implementations. To that end, firstly, we identify a set of necessary attestation properties and formulate guidelines to verify them. Secondly, we show why the current offerings are insufficient to guarantee security and what else is needed. In that regard, as Intel has released its CVM technology recently, we focus our attention on the Intel TDX CVM offerings. After analyzing and evaluating Intel TDX services from major cloud providers, we have identified the possibility of a malware injection attack and designed a solution to detect it. Through experiments, we show that our solution does not add any significant overhead.">
       </td>
       </tr>
 
@@ -389,6 +389,7 @@ function toggleNav() {
    
 </body>
 </html> 
+
 
 
 
