--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ hr.headerline {
       </td>
       <td class="bibtexitem">
       <b>A S M Asadujjaman</b>, Davi Pontes, Eduardo Falcão, Andrey Brito.
-       Securing Confidential VMs in Public Clouds.
+       <a href="papers/asadujjaman2024securing.pdf" target="_blank">Securing Confidential VMs in Public Clouds.</a>
        In <em>15th IEEE International Conference on Cloud Computing Technology and Science (CloudCom)</em>, IEEE, 2024.
       [&nbsp;<a href="bibtex_bib.html#asadujjaman2024securing">bib</a>&nbsp;]
       [&nbsp;<a href="papers/asadujjaman2024securing.pdf">PDF</a>&nbsp;]
@@ -389,6 +389,7 @@ function toggleNav() {
    
 </body>
 </html> 
+
 
 
 
