--- a/index.html
+++ b/index.html
@@ -135,6 +135,21 @@ hr.headerline {
       [<a name="asadujjaman2024securing">1</a>]
       </td>
       <td class="bibtexitem">
+      <b>A S M Asadujjaman</b>, Eduardo Falcão, Andrey Brito, Elisa Rojas.
+       <a href="" target="_blank">Surviving Zero-day Attacks Using Spatial Specialization.</a>
+       Computers &amp; Security, Elsevier, 2025.
+      [&nbsp;<a href="bibtex_bib.html#asadujjaman2024securing">bib</a>&nbsp;]
+      [&nbsp;<a href="">PDF</a>&nbsp;]
+      <!--<meta name="Abstract of the paper titled Surviving Zero-day Attacks Using Spatial Specialization" content="Applications and OS kernels contain numerous vulnerabilities that are being discovered, reported, exploited, and patched on a regular basis. The discovery of vulnerabilities may be done by both security professionals and malicious actors. Sometimes, once a vulnerability is discovered by malicious actors, it may not be known to security professionals and remain unpatched for years. %Attacks that exploit such unknown vulnerabilities are known as zero-day attacks. 
+This leaves even systems that require a high level of security and adopt strong threat models, such as those based on confidential computing, vulnerable to attacks, including remote arbitrary code execution. Control flow enforcement solutions may fail to prevent such attacks due to the vulnerability being related to part of an unusual but valid program control flow. Once such attacks are successful, an attacker may inflict further damage by performing secondary actions such as privilege escalation or container escape. Existing solutions fail to defend against such attacks in many cases. In this work, we propose a novel approach, called \textit{spatial specialization}, to protect cloud VMs and containers from zero-day attacks exploiting unknown vulnerabilities. Spatial specialization works by limiting the execution of system calls according to where, in the address space, they are required by the application. Our approach is applicable to server applications as well as software tools. We implement our solution in C, and through experimental evaluations, we show that it can prevent up to 96 percent of attacks, while the state-of-the-art solution can only prevent 66 percent. Through performance benchmarking, we show that our solution has a reasonably low overhead.">-->
+      </td>
+      </tr>
+
+      <tr valign="top">
+      <td align="right" class="bibtexnumber">
+      [<a name="asadujjaman2024securing">1</a>]
+      </td>
+      <td class="bibtexitem">
       <b>A S M Asadujjaman</b>, Davi Pontes, Eduardo Falcão, Andrey Brito.
        <a href="papers/asadujjaman2024securing.pdf" target="_blank">Securing Confidential VMs in Public Clouds.</a>
        In <em>15th IEEE International Conference on Cloud Computing Technology and Science (CloudCom)</em>, IEEE, 2024.
@@ -390,6 +405,7 @@ function toggleNav() {
    
 </body>
 </html> 
+
 
 
 
