--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ footer {
     <img style="background-color:blue; width:300px;" src="lsd.jpeg" alt="Email">
   </p>
   <p>
-    <a href="#home">Home</a> |
+    <a href="#home">Home</a> 
   </p>
 </section>
 </main>
@@ -190,3 +190,4 @@ footer {
 
 </body>
 </html>
+
