--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ footer {
 <section id="publications">
   <h1>Publications</h1>
   <table>
-    <tr><td><b>[1]</b> A S M Asadujjaman, Eduardo Falcão, Andrey Brito, Elisa Rojas. <i>Surviving Zero-day Attacks Using Spatial Specialization.</i> Computers & Security, Elsevier, 2025 (Accepted).</td></tr>
+    <tr><td><b>[1]</b> A S M Asadujjaman, Eduardo Falcão, Andrey Brito, Elisa Rojas. <i>Surviving Zero-day Attacks Using Spatial Specialization.</i> Computers & Security <br>(WoS/Scopus: Q1, IF: 5.4)</br>, Elsevier, 2025 (Accepted).</td></tr>
     <tr><td><b>[2]</b> A S M Asadujjaman, Davi Pontes, Eduardo Falcão, Andrey Brito. <a href="papers/asadujjaman2024securing.pdf" target="_blank">Securing Confidential VMs in Public Clouds.</a> In 15th IEEE CloudCom, IEEE, 2024. <a href="https://youtu.be/knuQP6M2Mis?si=UNB-5GuwS2JS5dV4">Presentation</a></td></tr>
     <tr><td><b>[3]</b> Davi Pontes, Fernando Silva, Anderson Melo, Carlos Pamplona Filho, A S M Asadujjaman, Eduardo Falcão, Andrey Brito. Multi-Platform and Vault-Free Attestation of Confidential VMs. ACM, 2024.</td></tr>
     <tr><td><b>[4]</b> Momen Oqaily et al. <i>A Tenant-based Two-stage Approach to Auditing...</i> ACM CODASPY, 2023.</td></tr>
@@ -189,5 +189,6 @@ footer {
 
 </body>
 </html>
+
 
 
