--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@ footer {
 <section id="publications">
   <h1>Publications</h1>
   <table>
-    <tr><td><b>[1]</b> A S M Asadujjaman, Eduardo Falcão, Andrey Brito, Elisa Rojas. <i>Surviving Zero-day Attacks Using Spatial Specialization.</i> Computers & Security <b>(WoS/Scopus: Q1, IF: 5.4)</b>, Elsevier, 2025 (Accepted).</td></tr>
+    <tr><td><b>[1]</b> A S M Asadujjaman, Eduardo Falcão, Andrey Brito, Elisa Rojas. <i>Surviving Zero-day Attacks Using Spatial Specialization.</i> Computers & Security (WoS/Scopus: <b>Q1</b>, IF: 5.4), Elsevier, 2025 (Accepted).</td></tr>
     <tr><td><b>[2]</b> A S M Asadujjaman, Davi Pontes, Eduardo Falcão, Andrey Brito. <a href="papers/asadujjaman2024securing.pdf" target="_blank">Securing Confidential VMs in Public Clouds.</a> In 15th IEEE CloudCom, IEEE, 2024. <a href="https://youtu.be/knuQP6M2Mis?si=UNB-5GuwS2JS5dV4">Presentation</a></td></tr>
     <tr><td><b>[3]</b> Davi Pontes, Fernando Silva, Anderson Melo, Carlos Pamplona Filho, A S M Asadujjaman, Eduardo Falcão, Andrey Brito. Multi-Platform and Vault-Free Attestation of Confidential VMs. ACM, 2024.</td></tr>
     <tr><td><b>[4]</b> Momen Oqaily, Suryadipta Majumdar, Lingyu Wang, Mohammad Ekramul Kabir, Yosr Jarraya, ASM Asadujjaman, Makan Pourzandi, Mourad Debbabi. <i>A tenant-based two-stage approach to auditing the integrity of virtual network function chains hosted on third-party clouds</i> ACM CODASPY, 2023.</td></tr>
     <tr><td><b>[5]</b> A S M Asadujjaman et al. 5GFIVer: Functional Integrity Verification for 5G Cloud-native Network Functions. IEEE CloudCom, 2022.</td></tr>
     <tr><td><b>[6]</b> A S M Asadujjaman et al. APPD: A Blackbox Approach to Verifying NFV Integrity. IEEE CNS, 2021.</td></tr>
-    <tr><td><b>[7]</b> D. Lopez-Pajares et al., A S M Asadujjaman. Amaru: Plug & Play Resilient In-band Control for SDN. IEEE Access <b>(WoS/Scopus: Q1, IF: 3.6)</b>, 2019.</td></tr>
+    <tr><td><b>[7]</b> D. Lopez-Pajares et al., A S M Asadujjaman. Amaru: Plug & Play Resilient In-band Control for SDN. IEEE Access (WoS/Scopus: <b>Q1</b>, IF: 3.6), 2019.</td></tr>
     <tr><td><b>[8]</b> A S M Asadujjaman et al. Fast Control Channel Recovery for Resilient In-band OpenFlow Networks. IEEE NetSoft, 2018.</td></tr>
     <tr><td><b>[9]</b> A S M Asadujjaman. Enhancement of Ethernet Ring Protection Switching Protocol, 2017.</td></tr>
     <tr><td><b>[10]</b> T K Roy, M A Mahmud, A S M Asadujjaman, et al. Fiber Optic Link Design for Multilink Systems.</td></tr>
@@ -189,6 +189,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
