--- a/index.html
+++ b/index.html
@@ -127,18 +127,18 @@ footer {
 <section id="publications">
   <h1>Publications</h1>
   <table>
-    <tr><td><b>[1]</b> A S M Asadujjaman, Eduardo Falcão, Andrey Brito, Elisa Rojas. <i>Surviving Zero-day Attacks Using Spatial Specialization.</i> Computers & Security (WoS/Scopus: <b>Q1</b>, IF: 5.4), Elsevier, 2025 (Accepted).</td></tr>
-    <tr><td><b>[2]</b> A S M Asadujjaman, Davi Pontes, Eduardo Falcão, Andrey Brito. <a href="papers/asadujjaman2024securing.pdf" target="_blank">Securing Confidential VMs in Public Clouds.</a> In 15th IEEE CloudCom, IEEE, 2024. <a href="https://youtu.be/knuQP6M2Mis?si=UNB-5GuwS2JS5dV4">Presentation</a></td></tr>
-    <tr><td><b>[3]</b> Davi Pontes, Fernando Silva, Anderson Melo, Carlos Pamplona Filho, A S M Asadujjaman, Eduardo Falcão, Andrey Brito. Multi-Platform and Vault-Free Attestation of Confidential VMs. ACM, 2024.</td></tr>
+    <tr><td><b>[1]</b> <b>A S M Asadujjaman</b>, Eduardo Falcão, Andrey Brito, Elisa Rojas. <i>Surviving Zero-day Attacks Using Spatial Specialization.</i> Computers & Security (WoS/Scopus: <span style="font-weight: bold; color: #007600;">Q1</span, IF: 5.4), Elsevier, 2025 (Accepted).</td></tr>
+    <tr><td><b>[2]</b> <b>A S M Asadujjaman</b>, Davi Pontes, Eduardo Falcão, Andrey Brito. <a href="papers/asadujjaman2024securing.pdf" target="_blank">Securing Confidential VMs in Public Clouds.</a> In 15th IEEE CloudCom, IEEE, 2024. <a href="https://youtu.be/knuQP6M2Mis?si=UNB-5GuwS2JS5dV4">Presentation</a></td></tr>
+    <tr><td><b>[3]</b> Davi Pontes, Fernando Silva, Anderson Melo, Carlos Pamplona Filho, <b>A S M Asadujjaman</b>, Eduardo Falcão, Andrey Brito. Multi-Platform and Vault-Free Attestation of Confidential VMs. ACM, 2024.</td></tr>
     <tr><td><b>[4]</b> Momen Oqaily, Suryadipta Majumdar, Lingyu Wang, Mohammad Ekramul Kabir, Yosr Jarraya, ASM Asadujjaman, Makan Pourzandi, Mourad Debbabi. <i>A tenant-based two-stage approach to auditing the integrity of virtual network function chains hosted on third-party clouds</i> ACM CODASPY, 2023.</td></tr>
-    <tr><td><b>[5]</b> A S M Asadujjaman, Mohammad Ekramul Kabir, Hinddeep Purohit, Suryadipta Majumdar, Lingyu Wang, Yosr Jarraya, Makan Pourzandi. <i>5GFIVer: Functional Integrity Verification for 5G Cloud-native Network Functions.</i> IEEE CloudCom, 2022.</td></tr>
-    <tr><td><b>[6]</b> A S M Asadujjaman, Momen Oqaily, Yosr Jarraya, Suryadipta Majumdar, Makan Pourzandi, Lingyu Wang, Mourad Debbabi. <i>APPD: A Blackbox Approach to Verifying NFV Integrity.</i> IEEE CNS, 2021.</td></tr>
-    <tr><td><b>[7]</b> Diego Lopez-Pajares, Joaquin Alvarez-Horcajo, Elisa Rojas, ASM Asadujjaman, Isaias Martinez-Yelmo. <i>Amaru: Plug & Play Resilient In-band Control for SDN.</i> IEEE Access (WoS/Scopus: <b>Q1</b>, IF: 3.6), 2019.</td></tr>
-    <tr><td><b>[8]</b> A S M Asadujjaman, Elisa Rojas, Mohammad Shah Alam, Suryadipta Majumdar. <i>Fast Control Channel Recovery for Resilient In-band OpenFlow Networks.</i> IEEE NetSoft, 2018.</td></tr>
-    <tr><td><b>[9]</b> A S M Asadujjaman. <i>Enhancement of Ethernet Ring Protection Switching Protocol</i>, 2017.</td></tr>
-    <tr><td><b>[10]</b> T K Roy, M A Mahmud, A S M Asadujjaman, et al. <i>Fiber Optic Link Design for Multilink Systems.</i></td></tr>
-    <tr><td><b>[11]</b> A S M Asadujjaman et al. <i>FCSEA: A Floodless Carrier-grade Scalable Ethernet Architecture</i>. IEEE ICECE, 2016.</td></tr>
-    <tr><td><b>[12]</b> A S M Asadujjaman et al. <i>Optimization of Ethernet Ring Protection Switching for Adaptive Modulation</i>. IEEE ICCIT, 2016.</td></tr>
+    <tr><td><b>[5]</b> <b>A S M Asadujjaman</b>, Mohammad Ekramul Kabir, Hinddeep Purohit, Suryadipta Majumdar, Lingyu Wang, Yosr Jarraya, Makan Pourzandi. <i>5GFIVer: Functional Integrity Verification for 5G Cloud-native Network Functions.</i> IEEE CloudCom, 2022.</td></tr>
+    <tr><td><b>[6]</b> <b>A S M Asadujjaman</b>, Momen Oqaily, Yosr Jarraya, Suryadipta Majumdar, Makan Pourzandi, Lingyu Wang, Mourad Debbabi. <i>APPD: A Blackbox Approach to Verifying NFV Integrity.</i> IEEE CNS, 2021.</td></tr>
+    <tr><td><b>[7]</b> Diego Lopez-Pajares, Joaquin Alvarez-Horcajo, Elisa Rojas, ASM Asadujjaman, Isaias Martinez-Yelmo. <i>Amaru: Plug & Play Resilient In-band Control for SDN.</i> IEEE Access (WoS/Scopus: <span style="font-weight: bold; color: #007600;">Q1</span>, IF: 3.6), 2019.</td></tr>
+    <tr><td><b>[8]</b> <b>A S M Asadujjaman</b>, Elisa Rojas, Mohammad Shah Alam, Suryadipta Majumdar. <i>Fast Control Channel Recovery for Resilient In-band OpenFlow Networks.</i> IEEE NetSoft, 2018.</td></tr>
+    <tr><td><b>[9]</b> <b>A S M Asadujjaman</b>. <i>Enhancement of Ethernet Ring Protection Switching Protocol</i>, 2017.</td></tr>
+    <tr><td><b>[10]</b> T K Roy, M A Mahmud, <b>A S M Asadujjaman</b>, et al. <i>Fiber Optic Link Design for Multilink Systems.</i></td></tr>
+    <tr><td><b>[11]</b> <b>A S M Asadujjaman</b> et al. <i>FCSEA: A Floodless Carrier-grade Scalable Ethernet Architecture</i>. IEEE ICECE, 2016.</td></tr>
+    <tr><td><b>[12]</b> <b>A S M Asadujjaman</b> et al. <i>Optimization of Ethernet Ring Protection Switching for Adaptive Modulation</i>. IEEE ICCIT, 2016.</td></tr>
   </table>
   <p>
     <a href="https://scholar.google.com/citations?user=hR3oekIAAAAJ&hl=en">Google Scholar</a> |
@@ -189,6 +189,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
