--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ footer {
     <tr><td><b>[4]</b> Momen Oqaily, Suryadipta Majumdar, Lingyu Wang, Mohammad Ekramul Kabir, Yosr Jarraya, ASM Asadujjaman, Makan Pourzandi, Mourad Debbabi. <i>A tenant-based two-stage approach to auditing the integrity of virtual network function chains hosted on third-party clouds</i> ACM CODASPY, 2023.</td></tr>
     <tr><td><b>[5]</b> <b>A S M Asadujjaman</b>, Mohammad Ekramul Kabir, Hinddeep Purohit, Suryadipta Majumdar, Lingyu Wang, Yosr Jarraya, Makan Pourzandi. <i>5GFIVer: Functional Integrity Verification for 5G Cloud-native Network Functions.</i> IEEE CloudCom, 2022.</td></tr>
     <tr><td><b>[6]</b> <b>A S M Asadujjaman</b>, Momen Oqaily, Yosr Jarraya, Suryadipta Majumdar, Makan Pourzandi, Lingyu Wang, Mourad Debbabi. <i>APPD: A Blackbox Approach to Verifying NFV Integrity.</i> IEEE CNS, 2021.</td></tr>
-    <tr><td><b>[7]</b> Diego Lopez-Pajares, Joaquin Alvarez-Horcajo, Elisa Rojas, ASM Asadujjaman, Isaias Martinez-Yelmo. <i>Amaru: Plug & Play Resilient In-band Control for SDN.</i> IEEE Access (WoS/Scopus: <span style="font-weight: bold; color: #007600;">Q1</span>, IF: 3.6), 2019.</td></tr>
+    <tr><td><b>[7]</b> Diego Lopez-Pajares, Joaquin Alvarez-Horcajo, Elisa Rojas, <b>A S M Asadujjaman</b>, Isaias Martinez-Yelmo. <i>Amaru: Plug & Play Resilient In-band Control for SDN.</i> IEEE Access (WoS/Scopus: <span style="font-weight: bold; color: #007600;">Q1</span>, IF: 3.6), 2019.</td></tr>
     <tr><td><b>[8]</b> <b>A S M Asadujjaman</b>, Elisa Rojas, Mohammad Shah Alam, Suryadipta Majumdar. <i>Fast Control Channel Recovery for Resilient In-band OpenFlow Networks.</i> IEEE NetSoft, 2018.</td></tr>
     <tr><td><b>[9]</b> <b>A S M Asadujjaman</b>. <i>Enhancement of Ethernet Ring Protection Switching Protocol</i>, 2017.</td></tr>
     <tr><td><b>[10]</b> T K Roy, M A Mahmud, <b>A S M Asadujjaman</b>, et al. <i>Fiber Optic Link Design for Multilink Systems.</i></td></tr>
@@ -185,6 +185,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
