--- a/index.html
+++ b/index.html
@@ -115,7 +115,6 @@ footer {
     A S M Asadujjaman is currently a researcher at the Federal University of Campina Grande (UFCG) 🇧🇷. Previously he obtained his PhD in Information Systems Engineering with the <a href="http://arc.encs.concordia.ca/">Audit Ready Cloud (ARC)</a> group from Concordia University 🇨🇦 and MSc in Information and Communication Technology from Bangladesh University of Engineering and Technology (BUET) 🇧🇩. His current research is in IT security.
   </p>
   <p>
-    <a href="#publications">Publications</a> |
     <a href="https://github.com/a-s-m-asadujjaman">Browse projects on GitHub</a>
   </p>
 </section>
@@ -138,8 +137,7 @@ footer {
   </table>
   <p>
     <a href="https://scholar.google.com/citations?user=hR3oekIAAAAJ&hl=en">Google Scholar</a> |
-    <a href="https://orcid.org/0000-0001-6180-3227">ORCiD</a> |
-    <a href="#experience">Experience</a>
+    <a href="https://orcid.org/0000-0001-6180-3227">ORCiD</a> 
   </p>
 </section>
 
@@ -149,7 +147,7 @@ footer {
     <li>Lead Engineer, Banglalink Digital Communications Ltd., Dhaka, Bangladesh.</li>
     <li>Teaching (POD), INSE 6130 (Fall 2021), Concordia University, Canada.</li>
   </ul>
-  <p><a href="#activities">Professional Activities</a></p>
+  
 </section>
 
 <section id="activities">
@@ -159,7 +157,7 @@ footer {
     <li>Journal Reviewer: Springer Annals of Telecommunications, Elsevier Computer Networks, IEEE TDSC</li>
     <li>Conference Reviewer: ESORICS'21</li>
   </ul>
-  <p><a href="#contact">Contact Information</a></p>
+ 
 </section>
 
 <section id="contact">
@@ -173,9 +171,7 @@ footer {
     <b>Email</b><br>
     <img style="background-color:blue; width:300px;" src="lsd.jpeg" alt="Email">
   </p>
-  <p>
-    <a href="#home">Home</a> 
-  </p>
+
 </section>
 </main>
 
@@ -185,6 +181,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
