--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ footer {
 <section id="publications">
   <h1>Publications</h1>
   <table>
-    <tr><td><b>[1]</b> <b>A S M Asadujjaman</b>, Eduardo Falcão, Andrey Brito, Elisa Rojas. <i>Surviving Zero-day Attacks Using Spatial Specialization.</i> Computers & Security (WoS/Scopus: <span style="font-weight: bold; color: #007600;">Q1</span>, IF: 5.4), Elsevier, 2025 (Accepted).</td></tr>
+    <tr><td><b>[1]</b> <b>A S M Asadujjaman</b>, Eduardo Falcão, Andrey Brito, Elisa Rojas. <i>Surviving Zero-day Attacks Using Spatial Specialization.</i> Computers & Security (WoS/Scopus: <span style="font-weight: bold; color: #007600;">Q1</span>, IF: 5.4), Elsevier, 2025, <a href="https://doi.org/10.1016/j.cose.2025.104709">DOI</a>.</td></tr>
     <tr><td><b>[2]</b> <b>A S M Asadujjaman</b>, Davi Pontes, Eduardo Falcão, Andrey Brito. <a href="papers/asadujjaman2024securing.pdf" target="_blank">Securing Confidential VMs in Public Clouds.</a> In 15th IEEE CloudCom, IEEE, 2024. <a href="https://youtu.be/knuQP6M2Mis?si=UNB-5GuwS2JS5dV4">Presentation</a></td></tr>
     <tr><td><b>[3]</b> Davi Pontes, Fernando Silva, Anderson Melo, Carlos Pamplona Filho, <b>A S M Asadujjaman</b>, Eduardo Falcão, Andrey Brito. Multi-Platform and Vault-Free Attestation of Confidential VMs. ACM, 2024.</td></tr>
     <tr><td><b>[4]</b> Momen Oqaily, Suryadipta Majumdar, Lingyu Wang, Mohammad Ekramul Kabir, Yosr Jarraya, ASM Asadujjaman, Makan Pourzandi, Mourad Debbabi. <i>A tenant-based two-stage approach to auditing the integrity of virtual network function chains hosted on third-party clouds</i> ACM CODASPY, 2023.</td></tr>
@@ -181,6 +181,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
